cabal-version:      3.6
name:               advent2022
version:            0.1.0.0
synopsis: Solutions to the 2022 advent of code

license:            BSD-3-Clause
author:             Javier París
maintainer:         javier.paris@udc.es

extra-source-files:
    CHANGELOG.md
    README.md

common shared_properties
    build-depends:    base ^>=4.16.3.0,
                      parsec ^>= 3.1
    other-modules:    AoC
    hs-source-dirs:   app
    default-language: Haskell2010


executable day1
    import:           shared_properties
    main-is:          day1.hs

executable day2
    import:           shared_properties
    main-is:          day2.hs

executable day3
    import:           shared_properties
    main-is:          day3.hs

executable day4
    import:           shared_properties
    main-is:          day4.hs

executable day5
    import:           shared_properties
    build-depends:    containers ^>=0.6
    main-is:          day5.hs