cabal-version:      3.6
name:               advent2022
version:            0.1.0.0
synopsis: Solutions to the 2022 advent of code

license:            BSD-3-Clause
author:             Javier París
maintainer:         javier.paris@udc.es

extra-source-files:
    CHANGELOG.md
    README.md

common shared_properties
    build-depends:    base ^>=4.16.3.0,
                      parsec ^>= 3.1
    other-modules:    AoC
    hs-source-dirs:   app
    default-language: Haskell2010


executable day01
    import:           shared_properties
    main-is:          day01.hs

executable day02
    import:           shared_properties
    main-is:          day02.hs

executable day03
    import:           shared_properties
    main-is:          day03.hs

executable day04
    import:           shared_properties
    main-is:          day04.hs

executable day05
    import:           shared_properties
    build-depends:    containers ^>=0.6
    main-is:          day05.hs

executable day06
    import:           shared_properties
    main-is:          day06.hs

executable day07
    import:           shared_properties
    build-depends:    containers ^>=0.6
    main-is:          day07.hs

executable day08
    import:           shared_properties
    build-depends:    array ^>=0.5
    main-is:          day08.hs

executable day09
    import:           shared_properties
    build-depends:    bifunctors ^>=5.5,
                      containers ^>=0.6
    main-is:          day09.hs

executable day10
    import:           shared_properties
    build-depends:    vector ^>=0.13
    main-is:          day10.hs

executable day11
    import:           shared_properties
    build-depends:    containers ^>=0.6,
                      mtl ^>=2.3
    main-is:          day11.hs

executable day12
    import:           shared_properties
    build-depends:    array ^>=0.5,
                      containers ^>=0.6
    main-is:          day12.hs

executable day13
    import:           shared_properties
    main-is:          day13.hs